--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.21.1",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "init": "^0.1.2",
     "next": "14.2.15",
+    "prisma": "^5.21.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.4"
